syntax = "proto3";

package bst.v1;

import "bst/v1/user.proto";

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

service AuthService {
  // POST /auth/login
  rpc Login(LoginRequest) returns (LoginResponse);
  // POST /auth/logout
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  // POST /auth/register
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string email    = 1;
  string password = 2;
}

message LoginResponse {
  string access_token  = 1;
  string refresh_token = 2;
  User   user          = 3;
}

message LogoutRequest {
  // Empty request as the user is identified from the authentication context
}

message LogoutResponse {
  bool success = 1;
}

message RegisterRequest {
  string email    = 1;
  string password = 2;
  string name     = 3;
}

message RegisterResponse {
  User   user          = 1;
  string access_token  = 2;
  string refresh_token = 3;
}
