syntax = "proto3";

package bst.v1;

import "user.proto";

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

service UserService {
  // GET /users/{id}
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // PUT /users/{id}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  // DELETE /users/{id}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  // GET /users/myself
  rpc GetMyself(GetMyselfRequest) returns (GetMyselfResponse);
}

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int32 user_id = 1;
  User  user    = 2;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message GetMyselfRequest {
  // Empty request as the user is identified from the authentication context
}

message GetMyselfResponse {
  User user = 1;
}
